Java 9+ startup flags (gc logging, etc)